fix footer section mobile

--- a/src/styles/components/ui/FooterSection.css
+++ b/src/styles/components/ui/FooterSection.css
@@ -43,6 +43,7 @@
     .footer-section h6 {
         margin: 0;
         font-size: 3.1vw;
+        margin-bottom: 5%;
     }
 }
 
